--- a/angular-src/src/app/components/profile/profile.component.css
+++ b/angular-src/src/app/components/profile/profile.component.css
@@ -6,28 +6,14 @@
 	margin-top: 20px;
 }
 
-.toprow {
-	margin-top: 40px;
-}
 
-#editbtn {
-	max-width: 100%;
-}
 
-#title {
-	display: flex;
-	justify-content: space-between;
-}
+/************************/
 
 .membershipdropdown {
 	display: flex;
 	justify-content: space-between;
 	padding: 10px;
-}
-
-
-.programi {
-	padding: 0;
 }
 
 .dropdown-menu {
@@ -37,6 +23,8 @@
     border-radius: 0;
     position: relative;
 }
+
+/*************************/
 
 @media (max-width: 991px) {
   .page-nav-wrapper {
