--- a/angular-src/src/app/components/login/login.component.css
+++ b/angular-src/src/app/components/login/login.component.css
@@ -1,4 +1,5 @@
 .login-background{
+    background-color: #00caf6;
     background-image: url("../../assets/Background.png");
     background-repeat:no-repeat;
     background-size: 100% 100%;
