--- a/angular-src/src/app/components/profile/profile.component.html
+++ b/angular-src/src/app/components/profile/profile.component.html
@@ -7,8 +7,9 @@
 	<!-- Member Info -->
 	<div class="panel panel-default">
     	<div class="panel-heading main-color-bg">
-        	<h3 class="panel-title main-color-bg">Member info</h3>
-        	<a><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Edit</a>
+    		<h3 class="panel-title main-color-bg">Member info
+    			<a><span class="glyphicon glyphicon-edit" aria-hidden="true"></span> Edit</a>
+    		</h3>
       	</div>
     	<div class="panel-body">
     	    <div class="col-md-3">
@@ -40,8 +41,9 @@
 	<!-- Memberships -->
 	<div class="panel panel-default">
     	<div class="panel-heading main-color-bg">
-        	<h3 class="panel-title main-color-bg">Membership</h3> 
-        	<input type="button" class="btn btn-default submit-btn responsbtn" value="Add New Membership">
+        	<h3 class="panel-title main-color-bg">Memberships
+        		<a><span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span> New Membership</a>
+        	</h3>
       	</div>
     	<div class="panel-body">
 			<ul class="list-group">
