--- a/angular-src/src/app/components/register/register.component.html
+++ b/angular-src/src/app/components/register/register.component.html
@@ -1,54 +1,36 @@
-<div class="register2background">
-    <form (submit) = "onRegisterSubmit()"> 
-        <div class="container">
-            <div class="col-lg-6 col-md-6 col-sm-8  registerbox">
-                <div class=" row">
-                    <div class="col-lg-8 col-md-8 col-sm-8 col-xs-6">
-                        <img src="../../assets/LOGOplaceholder.png" alt="Logo" class="logo"> 
+<div class="register-background">
+    <div class="container">
+        <div id="registerbox" class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
+            <div class="panel panel-info">
+                <div class="panel-heading">
+                    <div class="panel-title">
+                        <div>
+                            <h4>Sing up now!</h4>
+                            <p>Fill the for below to get instant access:</p>
+                        </div>
+                        <p class="glyphicon glyphicon-pencil"></p>
                     </div>
-                    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-6  ">
-                        <span class="singtext" >Register</span>   
-                    </div>      
                 </div>
-                <div class="row registerbox_content ">
-                    <div class="input-group input-group-sm form-group" >
-                        <span class="input-group-addon">
-                            <span class="glyphicon glyphicon-user"></span>
-                        </span>
-                        <input [(ngModel)]="name" name="name" name="name" class="form-control" type="text" placeholder="Name" >
-                    </div>
-                    <br>
-                    <div class="input-group input-group-sm form-group">
-                        <span class="input-group-addon">
-                            <span class="glyphicon glyphicon-lock"></span>
-                        </span>
-                        <input [(ngModel)]="username" name="username" class="form-control" type="username" placeholder="Username" >
-                    </div>
-                    <br>
-                    <div class="input-group input-group-sm form-group">
-                        <span class="input-group-addon">
-                            <span class="glyphicon glyphicon-lock"></span>
-                        </span>
-                        <input [(ngModel)]="email" name="email" class="form-control" type="email" placeholder="Email" >
-                    </div>   
-                    <br>
-                    <div class="input-group input-group-sm form-group">
-                        <span class="input-group-addon">
-                            <span class="glyphicon glyphicon-lock"></span>
-                        </span>
-                        <input [(ngModel)]="password" name="password" class="form-control" type="password" placeholder="Password" >
-                    </div>                 
-                </div>
-                <div class="row ">                   
-                    <!--div class="col-lg-8 col-md-8  col-sm-8 col-xs-7 forgotpassword "> 
-                        <a href="#"  > Forgot Username / Password?</a>                    
-                    </div-->
-                    <div class="col-lg-4 col-md-4 col-sm-4  col-xs-5"> 
-                    <input type="submit" class="btn btn-default submit-btn" value="Submit">       
-                    </div>
+                <div class="panel-body">
+                    <form (submit)="onRegisterSubmit()" class="form-horizontal" role="form">
+                        <div class="input">
+                            <input [(ngModel)]="name" type="name" class="form-control" name="name" placeholder="Name">
+                        </div>
+                        <div class="input">
+                            <input [(ngModel)]="username" type="username" class="form-control" name="username" placeholder="Username">
+                        </div>
+                        <div class="input">
+                            <input [(ngModel)]="email" type="email" class="form-control" name="email" placeholder="Email">
+                        </div>
+                        <div class="input">
+                            <input [(ngModel)]="password" type="password" class="form-control" name="password"placeholder="Password">
+                        </div>
+                        <div style="margin-top:10px" class="form">
+                            <input type="submit" class="btn btn-success btn-block" value="Sign me up"> 
+                        </div>
+                    </form>
                 </div>
             </div>
-        	<div class="col-lg-6 col-md-6 col-sm-4 "></div>
         </div>
-    </form>
+    </div>
 </div>
