--- a/angular-src/src/app/components/home/home.component.css
+++ b/angular-src/src/app/components/home/home.component.css
@@ -1,3 +1,81 @@
+.home-background {
+    background-color: #00caf6;
+    background-image: url("../../assets/BGplaceholder.png");
+    background-repeat: repeat;
+    position: relative;
+    display: flex;
+}
+
+.container {
+	padding: 0;
+}
+
 #myCarousel {
+	margin-top: 4.5%;
+	z-index: 1;
+}
+
+.img-responsive {
+	opacity: 0;
+}
+
+.carousel-indicators li{
+	border: 2px solid #03001a;
+	border-radius: 0;
+	background-color: #00caf6;
+
+}
+
+/* container sadrzaja vrteske */
+.carousel-caption {
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+	bottom: 0;
+	top: 0;
+	right: 0;
+	left: 0;
+	padding-left: 6%;
+	padding-right: 6%;
+	padding-top: 7%;
+	padding-bottom: 8%;
+}
+
+/* slika unutar vrteske */
+.carouselPic {
+	border: 1px solid #03001a;
 	position: relative;
+	width: 100%;
+	height: 100%;
+}
+
+.carouselPic img {
+	width: 100%;
+    height: 100%;
+}
+
+/* tekst unutar vrteske */
+.carouselText {
+	border: 1px solid #03001a;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	position: relative;
+	width: 100%;
+	height: 100%;
+	background-color: #00caf6;
+	text-align: center;
+	overflow: hidden;
+}
+
+/*kontrole*/
+.carousel-control.left,
+.carousel-control.right {
+    background-image: none;
+}
+
+.carousel-control {
+	z-index: 20;
+	color: #03001a;
+	width: 5%;
 }
