--- a/angular-src/src/app/components/home/home.component.html
+++ b/angular-src/src/app/components/home/home.component.html
@@ -1,33 +1,58 @@
-<div id="myCarousel" class="carousel slide" data-ride="carousel">
-  
-  <ol class="carousel-indicators">
-    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-    <li data-target="#myCarousel" data-slide-to="1"></li>
-    <li data-target="#myCarousel" data-slide-to="2"></li>
-  </ol>
-
-  
-  <div class="carousel-inner" role="listbox">
-    <div class="item active">
-      <img src="http://aspiretrust.org.uk/images/gallery/gl1/gym-view-of-weights-area.jpg" class="img-responsive" alt="Chania" style="width:100%; height:100%">
-    </div>
-
-    <div class="item">
-      <img src="https://storage.mobilebuilder.net/users/images/642fdac8-747f-413e-a91c-bc575806546f.jpg" class="img-responsive" alt="Chania" style="width:100%; height:100%">
-    </div>
-
-    <div class="item">
-      <img src="https://storage.mobilebuilder.net/users/images/7f2810ed-1e47-4680-bc5e-31daffb9b085.jpg" class="img-responsive" alt="Flower" style="width:100%; height:100%">
+<div class="home-background">
+  <div class="container col-md-7">
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+      <!-- indikatori -->
+      <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+        <li data-target="#myCarousel" data-slide-to="2"></li>
+      </ol>
+     <!-- sadrzaj -->
+      <div class="carousel-inner">
+        <div class="item active">
+          <img src="../../assets/carouselBG.png" class="img-responsive">
+          <div class="carousel-caption">
+            <div class="carouselPic">
+              <img src="assets/test.png" class="">
+            </div>
+            <div class="carouselText">
+              <h1>About Us 1</h1>
+              <h2>We are bla bla bla bla bla bla bla bla</h2>
+            </div>
+          </div>
+        </div>
+        <div class="item">
+          <img src="../../assets/carouselBG.png" class="img-responsive">
+          <div class="carousel-caption">
+            <div class="carouselText">
+              <h1>About Us 2</h1>
+              <h2>We are bla bla bla bla bla bla bla bla</h2>
+            </div>
+            <div class="carouselPic">
+              <img src="assets/test.png" class="">
+            </div>
+          </div>
+        </div>
+        <div class="item">
+          <img src="../../assets/carouselBG.png" class="img-responsive">
+          <div class="carousel-caption">
+            <div class="carouselPic">
+              <img src="assets/test.png" class="">
+            </div>
+            <div class="carouselText">
+              <h1>About Us 3</h1>
+              <h2>We are bla bla bla bla bla bla bla bla</h2>
+            </div>
+          </div>
+        </div>
+      </div>    
+      <!-- kontrole -->      
+      <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+      </a>
+      <a class="right carousel-control" href="#myCarousel" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+      </a>
     </div>
   </div>
-
-  
-  <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
 </div>
