--- a/angular-src/src/app/components/home/home.component.css
+++ b/angular-src/src/app/components/home/home.component.css
@@ -20,7 +20,7 @@
 }
 
 .carousel-indicators li{
-	border: 2px solid #03001a;
+	border: 2px solid #FFF;
 	border-radius: 0;
 	background-color: #00caf6;
 
@@ -43,7 +43,7 @@
 
 /* slika unutar vrteske */
 .carouselPic {
-	border: 1px solid #03001a;
+	border: 1px solid #FFF;
 	position: relative;
 	width: 100%;
 	height: 100%;
@@ -56,7 +56,7 @@
 
 /* tekst unutar vrteske */
 .carouselText {
-	border: 1px solid #03001a;
+	border: 1px solid #FFF;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
