--- a/angular-src/src/app/components/members/members.component.html
+++ b/angular-src/src/app/components/members/members.component.html
@@ -16,7 +16,6 @@
 	          <button class="search-box-btn"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button>
 	        </div>
 	      </div> 
-	      <br>
 	      <table class="table table-hover">
 	        <thead>
 	          <tr>
@@ -40,3 +39,5 @@
 	    </div>
   	</div>
 </div>
+
+<!-- Modal -->
