--- a/angular-src/src/app/components/business-settings/business-settings.component.html
+++ b/angular-src/src/app/components/business-settings/business-settings.component.html
@@ -2,53 +2,36 @@
   <app-page-nav></app-page-nav>
 </div>
 <div class="container col-xs-12 col-md-10">
-		<div class="panel panel-default">
-              <div class="panel-body">
-	                <div class="col-md-12 col-sm-12 col-xs-12 centeralign" >
-		              	<div class="col-md-8 col-sm-8 col-xs-9">
-			             	<h2>Price List</h2>
-		                </div>
-		                <div class="col-md-4 col-sm-3 col-xs-3">
-				          <input type="button" class="btn btn-default submit-btn responsbtn" value="Add Item">
-			          	</div> 
-					</div>
-                  <br>
-                <table id="memberstable" class="table table-striped table-hover">
-                      <thead>
-                        <tr>
-                          <th>Naziv</th>
-                          <th>Lenght</th>
-                          <th>Price</th>
-                          <th></th>
-                        </tr>
-                      </thead>
-                      <tbody>
-                        <tr>
-                          <td>random data TXT</td>
-                          <td>random data Number</td>
-                          <td>random data Number</td>
-                          <td><input type="button" class="btn btn-danger responsbtn" value="X"></td>
-                        </tr>
-                        <tr>
-                          <td>random data TXT</td>
-                          <td>random data Number</td>
-                          <td>random data Number</td>
-                          <td><input type="button" class="btn btn-danger responsbtn" value="X"></td>
-                        </tr>
-                        <tr>
-                          <td>random data TXT</td>
-                          <td>random data Number</td>
-                          <td>random data Number</td>
-                          <td><input type="button" class="btn btn-danger responsbtn" value="X"></td>
-                        </tr>
-                        <tr>
-                          <td>random data TXT</td>
-                          <td>random data Number</td>
-                          <td>random data Number</td>
-                          <td><input type="button" class="btn btn-danger responsbtn" value="X"></td>
-                        </tr>
-                      </tbody>
-                    </table>
-              </div>
-	</div>
+  <div class="panel panel-default">
+      <div class="panel-heading main-color-bg">
+        <h3 class="panel-title main-color-bg">Price List</h3>
+      </div>
+      <div class="panel-body">
+        <div class="table-controls col-xs-6 col-sm-6 col-md-6">
+          <button class="btn btn-default add-btn" type="submit">Add Item</button>       
+        </div>
+        <table class="table table-hover">
+          <thead>
+            <tr>
+              <th>Name</th>
+              <th>Lenght</th>
+              <th>Price</th>
+              <th></th>
+              <th></th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td><a>random data TXT</a></td>
+              <td>random data Number</td>
+              <td>random data Number</td>
+              <td><a><span class="glyphicon glyphicon-pencil"></span></a></td>
+              <td><a><span class="glyphicon glyphicon-trash"></span></a></td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
 </div>
+
+<!-- Modal -->
