--- a/angular-src/src/app/components/profile/profile.component.css
+++ b/angular-src/src/app/components/profile/profile.component.css
@@ -6,6 +6,14 @@
 	margin-top: 20px;
 }
 
+.well > h3{
+  margin-top: 0;
+}
+
+.well > h4{
+  word-wrap: break-word;
+}
+
 .panel-title > a{
   cursor: pointer;
   float: right;
@@ -17,13 +25,138 @@
   color: #ffffff;
 }
 
-.well > h4{
-  word-wrap: break-word;
+/* Membership */
+
+.membership{
+  border: none !important;
 }
 
-.list-group-item{
-  margin-bottom: 5px;
+/* Collapsed */
+
+.membership-heading{
+  margin: 0;
+  padding: 0;
+  background-color: transparent;
+  border: none;
 }
+
+.heading-wrap{
+  display: -webkit-inline-box;
+  min-width: 100%;
+  min-height: 100%;
+}
+
+/* Header data */
+.hdata-wrap{
+  border: 1px solid #3e3f3a;
+  background-color: #f8f5f0;
+  padding: 5px 15px;
+  width: 90%;
+}
+
+.hdata-wrap:hover{
+  border: 1px solid #001029;
+  background-color: #001029;
+}
+
+.hdata-wrap > .hdata-data{
+  color: #3e3f3a;
+  font-size: 15px;
+  float: left;
+  text-decoration: none;
+}
+
+.hdata-wrap:hover > .hdata-data{
+  color: #00caf6;
+}
+
+.hdata-wrap:hover > .hdata-data:hover{
+  color: #ffffff;
+}
+
+.hdata-wrap > .hdata-action{
+  color: #3e3f3a;
+  font-size: 15px;
+  float: right;
+  text-decoration: none;
+}
+
+.hdata-wrap:hover > .hdata-action{
+  color: #00caf6;
+}
+
+.hdata-wrap:hover > .hdata-action:hover{
+  color: #ffffff;
+}
+
+/* Header Action */
+.haction-wrap{
+  align-items: center;
+  background-color: transparent;
+  border: none;
+  display: flex;
+  font-size: 20px;
+  justify-content: center;
+  width: 10%;
+}
+
+.haction-wrap > a{
+  color: #3e3f3a;
+}
+
+.haction-wrap > a:hover{
+  color: #93c54b;
+}
+/* Expanded */
+
+.membership-content{
+  border: 1px solid #3e3f3a; 
+  margin-top: 1px;
+}
+
+/* Payment Log*/
+.list-group-item{
+  border: 1px solid #3e3f3a;
+  padding: 5px 15px;
+  margin-bottom: 2px;
+}
+
+.list-group-item:hover{
+  background-color: #001029;
+  border-color: #001029;
+  color: #00caf6; 
+}
+
+.list-group-item:hover > .payment-wrapper > .payment-action > a{
+  color: #00caf6; 
+}
+
+.list-group-item:hover > .payment-wrapper > .payment-action > a:hover{
+  color: #ffffff; 
+}
+
+.payment-wrapper{
+  display: inline-flex;
+  min-width: 100%;
+  min-height: 100%;
+}
+
+.payment-data{
+  width: 90%
+}
+
+.payment-action{
+  width: 10%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.payment-action > a{
+  color: #3e3f3a;
+}
+
+/* Modal */
 
 .modal-dialog{
   width: 400px;
@@ -59,27 +192,21 @@
   padding: 4px 16px;
 }
 
+.dropdown-menu{
+  max-height: 280px;
+  min-width: stretch;
+  text-align: center;
+  overflow: auto;
+}
+
+.dropdown-menu li a:hover{
+  background-color: #001029;
+  color: #00caf6;
+}
+
 .modal-footer > button {
   padding: 8px 16px !important;
 }
-
-/************************/
-
-.membershipdropdown {
-	display: flex;
-	justify-content: space-between;
-	padding: 10px;
-}
-
-.dropdown-menu {
-    width: 100%;
-    height: 100%;
-    margin-top: -1px;
-    border-radius: 0;
-    position: relative;
-}
-
-/*************************/
 
 @media (max-width: 991px) {
   .page-nav-wrapper {
