--- a/angular-src/src/app/components/profile/profile.component.html
+++ b/angular-src/src/app/components/profile/profile.component.html
@@ -41,22 +41,86 @@
 	<!-- Memberships -->
 	<div class="panel panel-default">
     	<div class="panel-heading main-color-bg">
-        	<h3 class="panel-title main-color-bg">Memberships
-        		<a><span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span> New Membership</a>
-        	</h3>
-      	</div>
+      	<h3 class="panel-title main-color-bg">Memberships
+      		<a data-toggle="modal" data-target="#new-membership-modal">
+      			<span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span> New Membership
+      		</a>
+      	</h3>
+    	</div>
     	<div class="panel-body">
-			<ul class="list-group">
-				<li class="list-group-item">
-			  		
-				</li>
-				<li class="list-group-item">
-			  		
-				</li>
-			</ul>
+    	<!-- Membership -->
+			<div *ngFor = "let membership of memberships" class="panel panel-default membership">
+				<div class="panel-heading membership-heading" role="tab" id="headingOne">
+          <!-- heading wrap -->
+          <div class="heading-wrap">
+            <!-- heading data wrap -->
+            <div class="hdata-wrap">
+              <a class="hdata-data" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+              {{membership.mName}} | Days Left: {{membership.daysLeft}} | Debt: {{membership.debt}}
+              </a>
+              <!-- Make Payment link -->
+              <a class="hdata-action" data-toggle="modal" data-target="#payment-modal">
+                Pay <span class="glyphicon glyphicon-tag" aria-hidden="true"></span>
+              </a>
+            </div>
+            <!-- heading data ends -->
+            <!-- heading action wrap -->
+            <div class="haction-wrap">
+              <a ><span class="glyphicon glyphicon-trash"></span></a>
+            </div>
+          </div>
+				</div>
+				<!-- Collapsed Content -->
+				<div id="collapseOne" class="panel-collapse collapse membership-content" role="tabpanel" aria-labelledby="headingOne">
+				  <div class="panel-body">
+				  	<!-- Membership Details -->
+				  	<div class="col-xs-6 col-sm-6 col-md-6">
+				        <div class="well dash-box">
+                <h3><span class="glyphicon glyphicon-transfer" aria-hidden="true"></span> Balance</h3>
+                <h4>
+				        Cost: {{membership.cost}}<br>
+				  			Debt: {{membership.debt}}<br>
+                </h4>
+			   			</div>
+  					</div>
+  					<div class="col-xs-6 col-sm-6 col-md-6">
+  				        <div class="well dash-box">
+                  <h3><span class="glyphicon glyphicon-calendar" aria-hidden="true"></span> Date</h3>
+                  <h4>
+  				       	Start: {{membership.start | date:'shortDate'}}<br>
+  				  			End: {{membership.end | date:'shortDate'}}<br>
+                  </h4>
+  			   			</div>
+  					</div>
+  					<!-- Membership Details End -->
+  					<!-- Payments -->
+  					<div class="col-xs-12 col-sm-12 col-md-12 membership-payments">
+  					  <ul class="list-group">
+  						  <li *ngFor = "let payments of membership.log" class="list-group-item">
+                  <!-- Payment content wrapper -->
+                  <div class="payment-wrapper">
+                    <!-- Payment data wrapper -->
+                    <div class="payment-data">
+        						  Date: {{payments.date | date:'shortDate'}}<br>
+        						  Amount: {{payments.amount}}<br>
+                    </div>
+                    <!-- Payment action wrapper -->
+                    <div class="payment-action">
+                      <a ><span class="glyphicon glyphicon-trash"></span></a>
+                    </div>
+                  </div>
+  						  </li>
+  				    </ul>
+  					</div>
+				  	<!-- Payments End -->
+				  </div>
+				</div>
+			</div>
+			<!-- Membership Ends -->
 		</div>
 	</div>
 </div>
+<!-- Content Ends -->
 <!-- Edit Modal -->
 <div class="modal fade" id="edit-member-modal" tabindex="-1" role="dialog" aria-labelledby="Edit Member">
   <div class="modal-dialog" role="document">
@@ -86,9 +150,105 @@
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
         <button (click)="updateMember(modName.value, modPhone.value, modMail.value)" type="button" class="btn btn-primary">
-        	<span class="glyphicon glyphicon-floppy-save" aria-hidden="true"></span> Save
+        	<span class="glyphicon glyphicon-floppy-save" aria-hidden="true"></span> Submit
         </button>
       </div>
     </div>
   </div>
 </div>
+<!-- Edit Modal Ends -->
+<!-- New Membership Modal -->
+<div class="modal fade" id="new-membership-modal" tabindex="-1" role="dialog" aria-labelledby="New Membership">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title"><span class="glyphicon glyphicon-file" aria-hidden="true"></span> New Membership</h4>
+      </div>
+      <!-- Modal Content -->
+      <div class="modal-body">
+        <div class="col-md-12">
+          <form  >
+            <div class="form-group">
+              <label for="modal-type">Type: </label>
+              <div class="dropdown">
+                <button id="modal-type" type="button" class="form-control" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  {{membershipType}}
+                  <span class="caret"></span>
+                </button>
+                <label *ngIf="errorType" for="modal-type" style="color: red; float: right; font-size: 10px;">
+                Please select membership type
+                </label>
+                <ul class="dropdown-menu" aria-labelledby="modal-type">
+                  <li *ngFor = "let membership of membershipTypes">
+                    <a (click)="membershipSelected(membership._id, membership.name, membership.cost)">
+                    {{membership.name}}
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <div class="form-group">
+              <label for="modal-start">Start: </label>
+              <input #modStart type="date" class="form-control" id="modal-start">
+              <label *ngIf="errorDate" for="modal-start" style="color: red; float: right; font-size: 10px;">
+              Please select the date
+              </label>
+            </div>
+            <div class="form-group">
+              <label for="modal-cost">Cost: </label>
+              <input type="text" class="form-control" id="modal-cost" value={{membershipCost}} disabled="">
+            </div>
+            <div class="form-group">
+              <label for="modal-amount">Amount Paid: </label>
+              <input #modAmount type="text" class="form-control" id="modal-amount" placeholder="0">
+            </div>
+          </form>
+        </div>
+      </div>
+      <!-- Modal Content Ends -->
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+        <button type="button" class="btn btn-primary">
+        	<span class="glyphicon glyphicon-floppy-save" aria-hidden="true"></span> Submit
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- New Membership Modal End -->
+<!-- Make Payment Modal -->
+<div class="modal fade" id="payment-modal" tabindex="-1" role="dialog" aria-labelledby="Payment">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title"><span class="glyphicon glyphicon-tag" aria-hidden="true"></span> Payment</h4>
+      </div>
+      <div class="modal-body">
+        <div class="col-md-12">
+          <form  >
+            <div class="form-group">
+              <label for="modal-start">Date: </label>
+              <input #modStart type="date" class="form-control" id="modal-start">
+              <label *ngIf="errorDate" for="modal-start" style="color: red; float: right; font-size: 10px;">
+              Please select the date
+              </label>
+            </div>
+            <div class="form-group">
+              <label for="modal-phone">Amount: </label>
+              <input #modPhone type="text" class="form-control" id="modal-phone" placeholder="0">
+            </div>
+          </form>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+        <button type="button" class="btn btn-primary">
+          <span class="glyphicon glyphicon-floppy-save" aria-hidden="true"></span> Submit
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- Make Payment Modal End -->
