Profile zavrsen, Dashboard kozmeticke promene

--- a/angular-src/src/app/components/dashboard/dashboard.component.html
+++ b/angular-src/src/app/components/dashboard/dashboard.component.html
@@ -15,13 +15,13 @@
       </div>
       <div class="col-md-3 col-sm-3">
         <div class="well dash-box">
-        <h3><span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span> {{statActiveMembers}}</h3>
+        <h3><span class="glyphicon glyphicon-ok-sign" aria-hidden="true"></span> {{statActiveMembers}}</h3>
         <h4>Number of Active Members</h4>
         </div>
       </div>
       <div class="col-md-3 col-sm-3">
         <div class="well dash-box">
-        <h3><span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span> {{statIndeptedMembers}}</h3>
+        <h3><span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span> {{statIndeptedMembers}}</h3>
         <h4>Number of Unpaid Memberships</h4>
         </div>
       </div>
@@ -39,7 +39,7 @@
     </div>
     <div class="panel-body">
       <div class="table-controls col-xs-6 col-sm-6 col-md-6">
-        <button (click)="resetErrorFlags()"class="btn btn-default add-btn" data-toggle="modal" data-target="#add-member-modal">
+        <button (click)="resetErrorFlags()" class="btn btn-default add-btn" data-toggle="modal" data-target="#add-member-modal">
         Add Member
         </button>       
       </div>
