login i singUp su uvek centrirani

--- a/angular-src/src/app/components/register/register.component.html
+++ b/angular-src/src/app/components/register/register.component.html
@@ -1,11 +1,11 @@
 <div class="register-background">
     <div class="container">
-        <div id="registerbox" class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
+        <div id="registerbox" class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 col-xs-8 col-xs-offset-2">
             <div class="panel panel-info">
                 <div class="panel-heading">
                     <div class="panel-title">
                         <div>
-                            <h4>Sing up now!</h4>
+                            <h4>Sign up now!</h4>
                             <p>Fill the for below to get instant access:</p>
                         </div>
                         <p class="glyphicon glyphicon-pencil"></p>
