--- a/angular-src/src/app/components/home/home.component.html
+++ b/angular-src/src/app/components/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="home-background">
-  <div class="container col-md-8">
+  <div class="container col-md-8 col-md-offset-2">
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
       <!-- indikatori -->
       <ol class="carousel-indicators">
