--- a/angular-src/src/app/components/register/register.component.html
+++ b/angular-src/src/app/components/register/register.component.html
@@ -6,7 +6,7 @@
                     <div class="panel-title">
                         <div>
                             <h4>Sign up now!</h4>
-                            <p>Fill the for below to get instant access:</p>
+                            <p>Fill the form below to get instant access:</p>
                         </div>
                         <p class="glyphicon glyphicon-pencil"></p>
                     </div>
