--- a/angular-src/src/app/components/business-settings/business-settings.component.html
+++ b/angular-src/src/app/components/business-settings/business-settings.component.html
@@ -22,12 +22,12 @@
             </tr>
           </thead>
           <tbody>
-            <tr *ngFor = "let item of itemTypes">
+            <tr *ngFor = "let item of items">
               <td><a>{{item.name}}</a></td>
               <td>{{item.length}}</td>
               <td>{{item.cost}}</td>
               <td><a data-toggle="modal" data-target="#edit-item-modal"><span class="glyphicon glyphicon-pencil"></span></a></td>
-              <td><a (click)="deleteItem(item.id)"><span class="glyphicon glyphicon-trash"></span></a></td>
+              <td><a (click)="deleteItem(item._id)"><span class="glyphicon glyphicon-trash"></span></a></td>
             </tr>
           </tbody>
         </table>
@@ -45,24 +45,24 @@
       </div>
       <div class="modal-body">
         <div class="col-md-12">
-          <form (keyup.enter)="addNewItem(modName.value, modLength.value, modCost.value)" >
+          <form (keyup.enter)="addNewItem(modItemName.value, modItemLength.value, modItemCost.value)" >
             <div class="form-group">
               <label for="modal-name">Name: </label>
-              <input #modName type="text" class="form-control" id="modal-name" placeholder="Name">
+              <input #modItemName type="text" class="form-control" id="modal-ItemName" placeholder="Name">
               <label *ngIf="errorName" for="modal-name" style="color: red; float: right; font-size: 10px;">
               Please fill in the name
               </label>
             </div>
             <div class="form-group">
               <label for="modal-length">Length: </label>
-              <input #modLength type="text" class="form-control" id="modal-length" placeholder="0">
+              <input #modItemLength type="text" class="form-control" id="modal-ItemLength" placeholder="0">
               <label *ngIf="errorLength" for="modal-length" style="color: red; float: right; font-size: 10px;">
               Please fill in the length
               </label>
             </div>
             <div class="form-group">
               <label for="modal-cost">Cost: </label>
-              <input #modCost type="text" class="form-control" id="modal-cost" placeholder="0">
+              <input #modItemCost type="text" class="form-control" id="modal-ItemCost" placeholder="0">
               <label *ngIf="errorCost" for="modal-cost" style="color: red; float: right; font-size: 10px;">
               Please fill in the cost
               </label>
@@ -72,19 +72,19 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-        <button (click)="addNewItem(modName.value, modLength.value, modCost.value)" type="button" class="btn btn-primary">Add Item</button>
+        <button (click)="addNewItem(modItemName.value, modItemLength.value, modItemCost.value)" type="button" class="btn btn-primary">Add Item</button>
       </div>
     </div>
   </div>
 </div>
 
-<!-- Edit Modal>
+<!-- Edit Modal >
 <div class="modal fade" id="edit-item-modal" tabindex="-1" role="dialog" aria-labelledby="Edit Item">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <h4 class="modal-title"><span class="glyphicon glyphicon-edit">Edit Item</h4>
+        <h4 class="modal-title"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span>Edit Item</h4>
       </div>
       <div class="modal-body">
         <div class="col-md-12">
