--- a/angular-src/src/app/components/business-settings/business-settings.component.html
+++ b/angular-src/src/app/components/business-settings/business-settings.component.html
@@ -78,7 +78,7 @@
   </div>
 </div>
 
-<!-- Edit Modal >
+<!-- Edit Modal -->
 <div class="modal fade" id="edit-item-modal" tabindex="-1" role="dialog" aria-labelledby="Edit Item">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
@@ -88,26 +88,26 @@
       </div>
       <div class="modal-body">
         <div class="col-md-12">
-          <form (keyup.enter)="updateItem(modName.value, modLength.value, modCost.value)" >
+          <form (keyup.enter)="updateItem(modItemName.value, modItemLength.value, modItemCost.value)" >
             <div class="form-group">
               <label for="modal-name">Name: </label>
-              <input #modName type="text" class="form-control" id="modal-name" value={{itemName}} placeholder="Name">
+              <input #modItemName type="text" class="form-control" id="modal-ItemName" value={{itemName}} placeholder="Name">
             </div>
             <div class="form-group">
               <label for="modal-length">Length: </label>
-              <input #modLength type="text" class="form-control" id="modal-length" value={{itemLength}} placeholder="0">
+              <input #modItemLength type="text" class="form-control" id="modal-ItemLength" value={{itemLength}} placeholder="0">
             </div>
             <div class="form-group">
               <label for="modal-cost">Cost: </label>
-              <input #modCost type="text" class="form-control" id="modal-cost" value={{itemCost}} placeholder="0">
+              <input #modItemCost type="text" class="form-control" id="modal-ItemCost" value={{itemCost}} placeholder="0">
             </div>
           </form>
         </div>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-        <button (click)="updateItem(modName.value, modLength.value, modCost.value)" type="button" class="btn btn-primary">Submit changes</button>
+        <button (click)="updateItem(modItemName.value, modItemLength.value, modItemCost.value)" type="button" class="btn btn-primary">Submit changes</button>
       </div>
     </div>
   </div>
-</div-->
+</div>
